fixed color issue for the time rows on mobile

--- a/css/weekli.less
+++ b/css/weekli.less
@@ -1,12 +1,13 @@
 // COLORS
-@wk-header-color:         #f9f9f9;
-@wk-header-color-hover:   #e7e7e7;
-@wk-unavailable-color:    #f26d5b;
-@wk-available-color:      #79BD8F;
-@wk-mobile-header-color:  #383838;
-@wk-border-color:         #222220;
-@wk-header-font-color:    #222220;
+@wk-header-color:             #f9f9f9;
+@wk-header-color-hover:       #e7e7e7;
+@wk-unavailable-color:        #f26d5b;
+@wk-available-color:          #79BD8F;
+@wk-mobile-header-color:      #383838;
+@wk-border-color:             #222220;
+@wk-header-font-color:        #222220;
 @wk-mobile-header-font-color: #FFFFFF;
+@wk-mobile-row-font-color:    #222220;
 
 // SIZES
 @wk-border-size:          1px;
@@ -191,6 +192,7 @@ table.weekli_mobile{
 
   td.wk-time{
     font-size: @wk-time-font-mobile;
+    color: @wk-mobile-row-font-color;
   }
 
   th.wk-day{
